--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon server.js",
+		"dev": "nodemon server.js --trace-warnings",
 		"watch": "tsc -w"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@minecraft-js/rcon": "^1.1.0",
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.2.5",
 		"express": "^4.18.2",
@@ -20,6 +21,7 @@
 		"prettier": "^2.8.8"
 	},
 	"devDependencies": {
+		"typed-emitter": "^2.1.0",
 		"typescript": "^5.0.4"
 	}
 }
