--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@minecraft-js/rcon": "^1.1.0",
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.2.5",
+		"dotenv": "^16.2.0",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
 		"nodemon": "^2.0.22",
